--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
+    "gcloud:build": "gcloud builds submit --tag eu.gcr.io/just-experience-335708/helloworld",
+    "gcloud:deploy": "gcloud run deploy --platform managed",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
