--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,5 +1,5 @@
 steps:
 - name: 'gcr.io/cloud-builders/docker'
-  args: [ 'build', '-t', 'eu.gcr.io/$PROJECT_ID/helloworld', '.' ]
+  args: [ 'build', '-t', 'europe-west3-docker.pkg.dev/$PROJECT_ID/nestjs-gcp/nestjs-gcp-app:latest', '.' ]
 - name: 'gcr.io/cloud-builders/docker'
-  args: [ 'push', 'eu.gcr.io/$PROJECT_ID/helloworld']
+  args: [ 'push', 'europe-west3-docker.pkg.dev/$PROJECT_ID/nestjs-gcp/nestjs-gcp-app:latest']
