--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,9 @@
 /dist
 /node_modules
 .env
+**/*/providers
+**/*/node_modules
+**/*/.gen
 
 # Logs
 logs
@@ -34,3 +37,4 @@ lerna-debug.log*
 !.vscode/tasks.json
 !.vscode/launch.json
 !.vscode/extensions.json
+
